# VoiceOS

./: claude-plan-v1.md  pyproject.toml  voice-os-spec.md
voice_os/: main.py  requirements.txt
voice_os.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
voice_os/agent/: error_handler.py  executor.py  prompts.py
voice_os/agent/tools/: close_app.py  open_app.py  play_media.py  search_apps.py  search_files.py  system_control.py  volume_control.py
voice_os/config/: settings.py
voice_os/core/: mic_manager.py  speech_to_text.py  vad.py  wake_word.py
voice_os/core/tts/: __init__.py  base.py  kokoro_tts.py  pyttsx3_tts.py
voice_os/memory/: file_indexer.py  session.py  vector_store.py
voice_os/os_handlers/: __init__.py  app_catalog.py  base.py  linux.py  windows.py
